# adaptive-rag-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/: create_tables.sql  database_schema.md
main/: config_loader.py
main/evaluation/: evaluation_pipeline.py  gold_dataset_example.json
main/file_embedding/: db_connection.py  embedding.py  extract_text.py  files_processing.py
main/llm/: app.py  llm.py  search.py  ui.py
