[project]
name = "adaptive-rag-pipeline"
version = "0.1.0"
description = "Adaptive multi-stage RAG pipeline for document Q&A and decision support"
authors = [{ name = "Andrea Cantelli" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "openai>=1.0",
    "pyyaml",
    "tiktoken",
    "langchain>=0.1.85",
    "langchain-community",
    "langchain-openai",
    "langchain-text-splitters",
    "pyodbc",
    "python-dotenv",
    "tqdm",
    "easyocr",
    "pillow",
    "python-docx",
    "PyMuPDF",
    "streamlit",
    "bm25s",
    "nltk",
    "ragas",
    "rapidfuzz",
    "numpy",
]

# pywin32 is only required on Windows for legacy .doc → .docx conversion.
# Install it manually on Windows if you need to ingest .doc files:
#   pip install pywin32
#
# Optional / evaluation-only packages (uncomment to install):
#   "datasets",
#   "llama_index",
#   "rank_bm25",
#   "langchain_experimental",

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["main"]
